--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,3 +1,1 @@
-node/ @laricouto @jeanmiguelacct
-/node/ @laricouto @jeanmiguelacct
-/node/* @laricouto @jeanmiguelacct
+* @laricouto @jeanmiguelacct
